# -------------------------------------------
# Copyright (c) 2021 - 2024 Prashant K. Jha
# -------------------------------------------
# PeriDEM https://github.com/prashjha/PeriDEM
#
# Distributed under the Boost Software License, Version 1.0. (See accompanying
# file LICENSE)

add_subdirectory(util)
add_subdirectory(fe)
add_subdirectory(particle)
add_subdirectory(nsearch)
add_subdirectory(peridem)
add_subdirectory(parallelcomp)
add_subdirectory(meshpartitioning)



